// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a hidden label 1`] = `
<div
  className="test-class controlLabel srOnly"
>
  Test label
</div>
`;

exports[`Renders a label without crashing 1`] = `
<label
  className="test-class controlLabel "
  htmlFor="2"
>
  Test label
</label>
`;

exports[`Renders a title instead of a label 1`] = `
<div
  className="test-class controlLabel "
>
  Test label
</div>
`;
